--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 <p>HackNC begins with just a weekend, but we hope you will whet skills, make friends, and foster ideas here
                     that flourish. Ready to apply? You'll need a laptop and your fanciest thinking cap - everything else
                     is on us. Get started now.</p>
+                <p>HackNC is an MLH-sponsored event, as such, we follow the MLH
+                <a href="http://mlh.io/code-of-conduct">code of conduct</a>.</p>
             </div>
         </div>
 
