--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <div class="section light about" id="about">
             <div class="container row">
                 <h2>General Information</h2>
+                <p>HackNC 2018 will take place on October 6th and 7th in Murray
+                and Venable Halls at UNC-Chapel Hill!</p>
                 <p>HackNC is a weekend for students of all skill levels to broaden their talents. Your challenge is to make
                     an awesome project in just 24 hours. You will have access to hands-on workshops and demos from our sponsors,
                     as well as exciting talks about the awesome things happening right now with computer science and technology
@@ -65,6 +67,11 @@
                 <p>HackNC is an MLH-sponsored event, as such, we follow the MLH
                 <a href="http://mlh.io/code-of-conduct">code of conduct</a>.</p>
             </div>
+        </div>
+
+        <div class="map-container">
+			<iframe src="https://www.google.com/maps/d/embed?mid=1-4ZqI9gEqrLvmT1FYqdjMsMzZJ2h2uIB"
+width="640" height="480"></iframe>
         </div>
 
         <div class="section dark faq" id="faq">
