--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         </div>
 
         <div class="map-container">
-			<iframe src="https://www.google.com/maps/d/embed?mid=1-4ZqI9gEqrLvmT1FYqdjMsMzZJ2h2uIB"
-width="640" height="480"></iframe>
+			<iframe src="https://www.google.com/maps/d/embed?mid=1-4ZqI9gEqrLvmT1FYqdjMsMzZJ2h2uIB"></iframe>
         </div>
 
         <div class="section dark faq" id="faq">
