top'ed the nav bar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
     <main id="content container">
         <!-- Logo and header -->
+        <div id='space-holder'></div>
         <div class="section dark center banner">
             <img class="logo" src="static/assets/CarnivalBanner.png">
             <h1 class="hacknc" class="center">HackNC</h1>
@@ -36,7 +37,7 @@
         </div>
 
         <!-- Navigation Bar -->
-        <nav>
+        <nav class='nfixed'>
             <div class="nav-wrapper center">
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="hide-on-med-and-down">
