updated btn decor & color

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img class="logo" src="static/assets/CarnivalBanner.png">
             <h1 class="hacknc" class="center">HackNC</h1>
             <h5 class="fall2018" class="center">October 6-7, 2018</h5>
-            <a class='btn-large register-btn'>Register Now!</a>
+            <button class='btn-large register-btn'>Register Now!</button>
         </div>
 
         <!-- Navigation Bar -->
