new banner, font resize/recolor, change margins, add travel

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         <!-- Logo and header -->
         <div id='space-holder'></div>
         <div class="section dark center banner">
-            <img class="logo" src="static/assets/CarnivalBanner.png">
-            <h1 class="hacknc" class="center">HackNC</h1>
-            <h5 class="fall2018" class="center">October 6-7, 2018</h5>
+            <img class="logo" src="static/assets/CarnivalBannerHanging.png">
+            <h4 class="fall2018" class="center">October 6-7, 2018</h4>
             <button class='btn-large register-btn'>Register Now!</button>
         </div>
 
@@ -40,7 +39,7 @@
         <nav class='nfixed'>
             <div class="nav-wrapper center">
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="hide-on-med-and-down">
+                <ul class="hide-on-small-only">
                     <li><a href="#about">Home</a></li>
                     <li><a href="#faq">FAQ</a></li>
                 </ul>
@@ -71,7 +70,7 @@
         </div>
 
         <div class="map-container">
-			<iframe src="https://www.google.com/maps/d/embed?mid=1-4ZqI9gEqrLvmT1FYqdjMsMzZJ2h2uIB"></iframe>
+            <iframe frameborder="0" style="border:0"src="https://www.google.com/maps/d/embed?mid=1-4ZqI9gEqrLvmT1FYqdjMsMzZJ2h2uIB" allowfullscreen></iframe>
         </div>
 
         <div class="section dark faq" id="faq">
@@ -172,22 +171,73 @@
             </div>
         </div>
         <div class="section light travel">
-
+            <div class="container">
+                <h2>Travel</h2>
+                <div class='row'>
+                    <div class='col s12'>
+                        <h4>Parking</h4>
+                        <p>Free parking is available over the weekend everywhere on campus, but we recommend the following decks:</p>
+                        <ul>
+                            <li><a href="https://www.google.com/maps/dir/Cobb+Parking+Deck,+Chapel+Hill,+NC+27514/Venable+Hall,+Chapel+Hill,+NC/@35.9107127,-79.0472257,18z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89acc2ea68ddf24b:0x38f6620f02eadfae!2m2!1d-79.0456262!2d35.9117533!1m5!1m1!1s0x89acc2ebb8543153:0x6c83a40e14111825!2m2!1d-79.0459804!2d35.9094423!3e2">Cobb Parking Deck</a></li>
+                            <li><a href="https://www.google.com/maps/dir/Bell+Tower+Parking+Deck,+Chapel+Hill,+NCVenable+Hall,+Chapel+Hill,+NC/@35.9107127,-79.0472257,18z/data=!4m14!4m13!1m5!1m1!1s0x89acc2eedc3bd00f:0x2dd3a16fc7f5b0c9!2m2!1d-79.0500641!2d35.9067103!1m5!1m1!1s0x89acc2ebb8543153:0x6c83a40e14111825!2m2!1d-79.0459804!2d35.9094423!3e2">Bell Tower Parking Deck</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class='row'>
+                    <div class='col s12'>
+                        <h4>Carpools</h4>
+                        <p>A carpool consists of 3 or more students intending to participate in HackNC.
+                        If you were accepted, your carpool is automatically eligible for reimbursement of the value detailed below, which roughly corresponds to the round trip cost of gas. Limit one per carpool. Qualifications for carpool grants are as follows:</p>
+                        <ol>
+                            <li>RSVP via the link in your email</li>
+                            <li>Drive yourself and at least 2 passengers to HackNC.</li>
+                            <li>Submit a project at the end of HackNC.</li>
+                            <li>Submit a copy of gas receipts by Nov. 7, 2017.</li>
+                        </ol>
+                    </div>
+                </div>
+                
+                <div class='row'>
+                    <div class='col s12'>
+                        <h4>Carpool Amounts</h4>
+                        <table class='grant-table'>
+                            <tr><th>One-way distance</th><th>Grant Amount</th></tr>
+                            <tr><td>0 - 50 miles</td><td>$0</td></tr>
+                            <tr><td>51 - 100 miles</td><td>$20</td></tr>
+                            <tr><td>101 - 200 miles</td><td>$40</td></tr>
+                            <tr><td>201 - 300 miles</td><td>$60</td></tr>
+                            <tr><td>301 - 400 miles</td><td>$80</td></tr>
+                            <tr><td>401+ miles</td><td>$100</td></tr>
+                        </table>
+                        <br>
+                    </div>
+                </div>
+                
+                <div class='row'>
+                    <div class='col s12'>
+                        <p>We cannot make exceptions to this policy. Grants will be distributed after the event by mail.</p>
+                        <h4>Travel Vouchers</h4>
+                        <p>HackNC has a limited number of $50 grants available to supplement the cost of bus/train/plane tickets. These vouchers may be available after all carpool requests are processed on a first-come, first-served basis.</p>
+                        <p>Note that travel grants are only available to hackers traveling from OUTSIDE the NC Triangle (UNC / NC State / Duke / etc.).</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="section dark contact page-footer">
         <div class="container">
-            <div class="row center">
-                <div class="center col s3"><a href="https://www.facebook.com/thehacknc/">
+            <h2>Contact</h2>
+            <div class="row">
+                <div class="col s3"><a href="https://www.facebook.com/thehacknc/">
                         <i class="fab fa-facebook-square"></i><span> Facebook</span></a>
                 </div>
-                <div class="center col s3"><a href="https://twitter.com/thehacknc">
+                <div class="col s3"><a href="https://twitter.com/thehacknc">
                         <i class="fab fa-twitter-square"></i><span> Twitter</span></a>
                 </div>
-                <div class="center col s3"><a href="https://www.snapchat.com/add/hacknc">
+                <div class="col s3"><a href="https://www.snapchat.com/add/hacknc">
                         <i class="fab fa-snapchat-square"></i><span> Snapchat</span></a>
                 </div>
-                <div class="center col s3"><a href="mailto:hello@hacknc.com">
+                <div class="col s3"><a href="mailto:hello@hacknc.com">
                         <i class="fas fa-envelope-square"></i><span> hello@hacknc.com</span></a>
                 </div>
             </div>
