--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="section dark center">
                 <img class="logo" src="static/assets/CarnivalBannerHanging.png">
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
-                <button class='btn-large register-btn'>Register Now!</button>
+                <a class='btn-large register-btn' href="https://registration.hacknc.com/">Register Now!</a>
             </div>
         </div>
 
