--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <ul class="collapsible">
                             <li>
                                 <div class="collapsible-header"><h6>What if I'm in high school?</h6></div>
-                                <div class="collapsible-body"><p>As long as you'll be 18 by November 3rd, 2017, we would love for you to come to HackNC. Unfortunately
+                                <div class="collapsible-body"><p>As long as you'll be 18 by October 6th 2018, we would love for you to come to HackNC. Unfortunately
                                     (because of the incredible amount of paperwork involved) we won't be able to accept anyone under the
                                     age of 18.</p></div>
                             </li>
@@ -195,7 +195,7 @@
                                 <li>RSVP via the link in your email</li>
                                 <li>Drive yourself and at least 2 passengers to HackNC.</li>
                                 <li>Submit a project at the end of HackNC.</li>
-                                <li>Submit a copy of gas receipts by Nov. 7, 2017.</li>
+                                <li>Submit a copy of gas receipts by Oct 7th 2018.</li>
                             </ol>
                         </div>
                     </div>
