--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                             <h4>Parking</h4>
                             <p>Free parking is available over the weekend everywhere on campus, but we recommend the following decks:</p>
                             <ul>
-                                <li><a href="https://www.google.com/maps/dir/Cobb+Parking+Deck,+Chapel+Hill,+NC+27514/Venable+Hall,+Chapel+Hill,+NC/@35.9107127,-79.0472257,18z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89acc2ea68ddf24b:0x38f6620f02eadfae!2m2!1d-79.0456262!2d35.9117533!1m5!1m1!1s0x89acc2ebb8543153:0x6c83a40e14111825!2m2!1d-79.0459804!2d35.9094423!3e2">Cobb Parking Deck</a></li>
-                                <li><a href="https://www.google.com/maps/dir/Bell+Tower+Parking+Deck,+Chapel+Hill,+NCVenable+Hall,+Chapel+Hill,+NC/@35.9107127,-79.0472257,18z/data=!4m14!4m13!1m5!1m1!1s0x89acc2eedc3bd00f:0x2dd3a16fc7f5b0c9!2m2!1d-79.0500641!2d35.9067103!1m5!1m1!1s0x89acc2ebb8543153:0x6c83a40e14111825!2m2!1d-79.0459804!2d35.9094423!3e2">Bell Tower Parking Deck</a></li>
+                                <li><a href="https://www.google.com/maps/dir/Cobb+Parking+Deck,+Chapel+Hill,+NC+27514/Venable+Hall,+Chapel+Hill,+NC/@35.9101836,-79.051437,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89acc2ea68ddf24b:0x38f6620f02eadfae!2m2!1d-79.0456143!2d35.911746!1m5!1m1!1s0x89acc2e8e8cec393:0x2b6adc1d4724a250!2m2!1d-79.0513037!2d35.9096217!3e2">Cobb Parking Deck</a></li>
+                                <li><a href="https://www.google.com/maps/dir/Bell+Tower+Parking+Deck,+Chapel+Hill,+NC/Venable+Hall,+Chapel+Hill,+NC/@35.9082409,-79.0533441,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89acc2eedc3bd00f:0x2dd3a16fc7f5b0c9!2m2!1d-79.0500641!2d35.9067103!1m5!1m1!1s0x89acc2e8e8cec393:0x2b6adc1d4724a250!2m2!1d-79.0513037!2d35.9096217!3e2">Bell Tower Parking Deck</a></li>
                             </ul>
                         </div>
                     </div>
