--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li><a href="#about">Home</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#travel">Travel</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -52,10 +53,12 @@
             <li><a href="#about">Home</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li><a href="#travel">Travel</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
 
         <div class="info">
-            <div class="section light about" id="about">
+            <div class="section light about">
+                <a class="nav-anchor" id="about"></a>
                 <div class="container row">
                     <h2>General Information</h2>
                     <p>HackNC 2018 will take place on October 6th and 7th in Murray
@@ -76,7 +79,8 @@
                 <iframe frameborder="0" style="border:0"src="https://www.google.com/maps/d/embed?mid=1-4ZqI9gEqrLvmT1FYqdjMsMzZJ2h2uIB" allowfullscreen></iframe>
             </div>
 
-            <div class="section dark faq" id="faq">
+            <div class="section dark faq">
+                <a class="nav-anchor" id="faq"></a>
                 <div class="container row">
                     <h2 class="col s12">FAQ</h2>
                     <div class="col s12 m6 l6">
@@ -173,7 +177,8 @@
                     </div>
                 </div>
             </div>
-            <div class="section light travel" id="travel">
+            <div class="section light travel">
+                <a class="nav-anchor" id="travel"></a>
                 <div class="container">
                     <h2>Travel</h2>
                     <div class='row'>
@@ -230,18 +235,22 @@
     </main>
     <footer class="section dark contact page-footer">
         <div class="container">
+            <a class="nav-anchor" id="contact"></a>
             <h2>Contact</h2>
             <div class="row">
-                <div class="col s3"><a href="https://www.facebook.com/thehacknc/">
+                <div class="col s12"><a href="https://www.facebook.com/thehacknc/">
                         <i class="fab fa-facebook-square"></i><span> Facebook</span></a>
                 </div>
-                <div class="col s3"><a href="https://twitter.com/thehacknc">
+                <div class="col s12"><a href="https://twitter.com/thehacknc">
                         <i class="fab fa-twitter-square"></i><span> Twitter</span></a>
                 </div>
-                <div class="col s3"><a href="https://www.snapchat.com/add/hacknc">
+                <div class="col s12"><a href="https://www.instagram.com/thehacknc/">
+                        <i class="fab fa-instagram"></i><span> Instagram</span></a>
+                </div>
+                <div class="col s12"><a href="https://www.snapchat.com/add/hacknc">
                         <i class="fab fa-snapchat-square"></i><span> Snapchat</span></a>
                 </div>
-                <div class="col s3"><a href="mailto:hello@hacknc.com">
+                <div class="col s12"><a href="mailto:hello@hacknc.com">
                         <i class="fas fa-envelope-square"></i><span> hello@hacknc.com</span></a>
                 </div>
             </div>
