--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
                         <ul class="collapsible">
                             <li>
                                 <div class="collapsible-header"><h6>How do I get in?</h6></div>
-                                <div class="collapsible-body"><p>Anyone can attend HackNC. Our admission criteria doesn't include your level of experience. However, the
-                                    registration system is still under construction, join our mailing list to get updates!</p></div>
+                                <div class="collapsible-body"><p>Anyone can attend HackNC. Our admission criteria doesn't include your level of experience. <a href="https://hacknc.typeform.com/to/vum1rA">Go here to register now!</a></p></div>
                             </li>
                         </ul>
                         <ul class="collapsible">
