added past sponsors, moved images into images folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HackNC 2018</title>
-    <link rel="shortcut icon" type="image/png" type="image/png" href="static/assets/logo-transparent.png">
+    <link rel="shortcut icon" type="image/png" type="image/png" href="static/assets/images/logo-transparent.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Lobster+Two|Montserrat|Pacifico|Philosopher|Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
@@ -29,7 +29,7 @@
         <div class="banner">
             <div id='space-holder'></div>
             <div class="section dark center">
-                <img class="logo" src="static/assets/CarnivalBannerHanging.png">
+                <img class="logo" src="static/assets/images/CarnivalBannerHanging.png">
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
                 <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
                 <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
@@ -46,6 +46,7 @@
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#travel">Travel</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#sponsors">Sponsors</a></li>
                 </ul>
             </div>
         </nav>
@@ -56,6 +57,7 @@
             <li><a href="#faq">FAQ</a></li>
             <li><a href="#travel">Travel</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#sponsors">Sponsors</a></li>
         </ul>
 
         <div class="info">
@@ -234,8 +236,48 @@
                 </div>
             </div>
         </div>
+        <div class="section dark sponsors">
+            <a class="nav-anchor" id="sponsors"></a>
+            <div class="container">
+                <h2>Our Past Sponsors</h2>
+                <div class='center'>
+                    <div class="row">
+                        <div class="col s12 m4 center">
+                            <a href='https://www.capitalone.com/'>
+                                <img class='sponsor-image tier-4' src='static/assets/images/sponsors/capitalone.png'></a>
+                            <a href='https://www.ibm.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/ibm.png'></a>
+                            <a href='https://www.genesys.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/genesys.png'></a>
+                            <a href='https://www.facebook.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/facebook.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
+                            <a href='https://www.fidelity.com/'>
+                                <img class='sponsor-image tier-4' src='static/assets/images/sponsors/fidelity.png'></a>
+                            <a href='https://www.sentryone.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/sentryone.png'></a>
+                            <a href='https://www.sas.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
+                            <a href='https://cs.unc.edu/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/unc-cs.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
+                            <a href='https://www.captechconsulting.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/captech.png'></a>
+                            <a href='https://www.redventures.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/rv.png'></a>
+                            <a href='https://www.sonovol.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sonovol.png'></a>
+                        </div>
+                    </div>
+                    <p class="center">Looking to sponsor HackNC? Email us at <a class="sponsor-email"
+                    href="mailto:sponsors@hacknc.com">sponsors@hacknc.com</a></p>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer class="section dark contact page-footer">
+    <footer class="section light contact page-footer">
         <div class="container">
             <a class="nav-anchor" id="contact"></a>
             <h2>Contact</h2>
