--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="section dark center">
                 <img class="logo" src="static/assets/images/CarnivalBannerHanging.png">
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
-                <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
+                <a class='btn-large modal-trigger form-btn'
+                     href="#volunteer-mentor">Volunteer/Mentor!</a>
                 <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
                 <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
             </div>
@@ -276,6 +277,18 @@
                 </div>
             </div>
         </div>
+    <div id='volunteer-mentor' class='modal'>
+        <div class='modal-content light'>
+            <h4>Which one would you like to do?</h4>
+            <center>
+            <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
+            <a class='btn-large form-btn'
+                                          href="https://goo.gl/forms/ipmaTelKd5D1eY3f1">
+                Mentor!</a>
+            </center>
+        </div>
+    </div>
+
     </main>
     <footer class="section light contact page-footer">
         <div class="container">
