--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
             <div class="section dark center">
                 <img class="logo" src="static/assets/images/CarnivalBannerHanging.png">
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
-                <a class='btn-large modal-trigger form-btn'
-                     href="#volunteer-mentor">Volunteer/Mentor!</a>
-                <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
-                <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
+                <div class='hide-on-small-only'>
+                    <a class='btn-large modal-trigger form-btn'
+                         href="#volunteer-mentor">Volunteer/Mentor!</a>
+                    <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
+                    <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
+                </div>
+                <div class="hide-on-med-and-up">
+                    <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
+                    <a class='btn-large modal-trigger form-btn'
+                         href="#volunteer-mentor">Volunteer/Mentor!</a>
+                    <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
+
+                </div>
             </div>
         </div>
 
