--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head lang="en-us">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#3A3352">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>HackNC 2018</title>
-    <link rel="shortcut icon" type="image/png" type="image/png" href="static/assets/images/logo-transparent.png">
+    <link rel="shortcut icon" type="image/png" type="image/png" href="static/assets/images/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Lobster+Two|Montserrat|Pacifico|Philosopher|Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
@@ -33,14 +35,14 @@
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
                 <div class='hide-on-small-only'>
                     <a class='btn-large modal-trigger form-btn'
-                         href="#volunteer-mentor">Volunteer/Mentor!</a>
+                         href="#volunteer-mentor">Volunteer / Mentor!</a>
                     <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
                     <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
                 </div>
                 <div class="hide-on-med-and-up">
                     <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
                     <a class='btn-large modal-trigger form-btn'
-                         href="#volunteer-mentor">Volunteer/Mentor!</a>
+                         href="#volunteer-mentor">Volunteer / Mentor!</a>
                     <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
 
                 </div>
@@ -289,12 +291,12 @@
     <div id='volunteer-mentor' class='modal'>
         <div class='modal-content light'>
             <h4>Which one would you like to do?</h4>
-            <center>
+            <div class="center">
             <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
             <a class='btn-large form-btn'
                                           href="https://goo.gl/forms/ipmaTelKd5D1eY3f1">
                 Mentor!</a>
-            </center>
+            </div>
         </div>
     </div>
 
