add sponsors modal, changed top section height for better mobile compat

--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
             alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
     <main id="content container">
 
+        <div id='volunteer-mentor' class='modal'>
+            <div class='modal-content light'>
+                <h4>Which one would you like to do?</h4>
+                <div class="center">
+                <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
+                <a class='btn-large form-btn'
+                                                href="https://goo.gl/forms/ipmaTelKd5D1eY3f1">
+                    Mentor!</a>
+                </div>
+            </div>
+        </div>
+
+        <div id='sponsor-btn' class='modal'>
+            <div class='modal-content light'>
+                <h4>Thank you for your interest!</h4>
+                <p>If you would like more information, here is our
+                    <a href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">
+                        sponsor information packet
+                    </a>, and if you are interested in sponsoring us, send an email to <a class="sponsor-email"
+                    href="mailto:sponsors@hacknc.com">sponsors@hacknc.com</a></p>
+                </div>
+            </div>
+        </div>
+        
+
         <!-- Logo and header -->
         <div class="banner">
             <div id='space-holder'></div>
@@ -35,15 +60,17 @@
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
                 <div class='hide-on-small-only'>
                     <a class='btn-large modal-trigger form-btn'
-                         href="#volunteer-mentor">Volunteer / Mentor!</a>
+                         href="#volunteer-mentor">Volunteer!</a>
                     <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
-                    <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
+                    <a class='btn-large form-btn modal-trigger'
+                        href="#sponsor-btn">Sponsor Us!</a>
                 </div>
                 <div class="hide-on-med-and-up">
-                    <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
+                    <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a><br>
                     <a class='btn-large modal-trigger form-btn'
-                         href="#volunteer-mentor">Volunteer / Mentor!</a>
-                    <a class='btn-large form-btn' href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">Sponsor Us!</a>
+                        href="#volunteer-mentor">Volunteer!</a><br>
+                    <a class='btn-large form-btn modal-trigger'
+                        href="#sponsor-btn">Sponsor Us!</a>
 
                 </div>
             </div>
@@ -288,18 +315,7 @@
                 </div>
             </div>
         </div>
-    <div id='volunteer-mentor' class='modal'>
-        <div class='modal-content light'>
-            <h4>Which one would you like to do?</h4>
-            <div class="center">
-            <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
-            <a class='btn-large form-btn'
-                                          href="https://goo.gl/forms/ipmaTelKd5D1eY3f1">
-                Mentor!</a>
-            </div>
-        </div>
-    </div>
-
+    
     </main>
     <footer class="section light contact page-footer">
         <div class="container">
