changed gdrive link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class='modal-content light'>
                 <h4>Thank you for your interest!</h4>
                 <p>If you would like more information, here is our
-                    <a href="https://drive.google.com/open?id=1vEQ8z8URSWh_gFceeW-mgi8EhI_w5hjw">
+                    <a href="static/assets/resources/sponsor_packet.pdf">
                         sponsor information packet
                     </a>, and if you are interested in sponsoring us, send an email to <a class="sponsor-email"
                     href="mailto:sponsors@hacknc.com">sponsors@hacknc.com</a></p>
