--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                 <h4>Which one would you like to do?</h4>
                 <div class="center">
                 <a class='btn-large form-btn' href="https://goo.gl/forms/NPIVpv7DasufAcw73">Volunteer!</a>
-                <a class='btn-large form-btn'
-                                                href="https://goo.gl/forms/ipmaTelKd5D1eY3f1">
+                <a class='btn-large form-btn' href="https://goo.gl/forms/ipmaTelKd5D1eY3f1">
                     Mentor!</a>
+                <p>Interested in learning more about being a mentor? Check out
+                our <a href="becoming-a-mentor.html">mentoring at a hackathon
+                    101</a></p>
                 </div>
             </div>
         </div>
