add wolfram to sponsors, change sponsors color and layout

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
             </div>
 
-        <div class='section dark sponsors schedule'>
+        <div class='section dark schedule'>
             <a class="nav-anchor" id="schedule"></a>
             <div class='container'>
                 <h2>Schedule*</h2>
@@ -293,7 +293,7 @@
             </div>
         </div>
 
-        <div class="section light sponsors">
+        <div class="section sponsors">
             <a class="nav-anchor" id="sponsors"></a>
             <div class="container">
                 <h2>Our Past Sponsors</h2>
@@ -302,30 +302,56 @@
                         <div class="col s12 m4 center">
                             <a href='https://www.capitalone.com/'>
                                 <img class='sponsor-image tier-4' src='static/assets/images/sponsors/capitalone.png'></a>
-                            <a href='https://www.ibm.com/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/ibm.png'></a>
-                            <a href='https://www.genesys.com/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/genesys.png'></a>
-                            <a href='https://www.facebook.com/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/facebook.png'></a>
                         </div>
                         <div class="col s12 m4 center">
                             <a href='https://www.fidelity.com/'>
                                 <img class='sponsor-image tier-4' src='static/assets/images/sponsors/fidelity.png'></a>
-                            <a href='https://www.sentryone.com/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/sentryone.png'></a>
-                            <a href='https://www.sas.com/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
-                            <a href='https://cs.unc.edu/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/unc-cs.png'></a>
                         </div>
                         <div class="col s12 m4 center">
                             <a href='https://www.captechconsulting.com/'>
                                 <img class='sponsor-image tier-3' src='static/assets/images/sponsors/captech.png'></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m4 center">
+                            <a href='https://www.ibm.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/ibm.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
+                            <a href='https://www.sentryone.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/sentryone.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
                             <a href='https://www.redventures.com/'>
                                 <img class='sponsor-image tier-3' src='static/assets/images/sponsors/rv.png'></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m4 center">
+                            <a href='https://www.facebook.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/facebook.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
+                            <a href='https://www.sas.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
+                            <a href='https://www.wolfram.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/wolfram.png'></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m4 center">
+                            <a href='https://www.genesys.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/genesys.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
                             <a href='https://www.sonovol.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sonovol.png'></a>
+                        </div>
+                        <div class="col s12 m4 center">
+                            <a href='https://cs.unc.edu/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/unc-cs.png'></a>
                         </div>
                     </div>
                     <p class="center">Looking to sponsor HackNC? Email us at <a class="sponsor-email"
