--- a/index.html
+++ b/index.html
@@ -296,60 +296,52 @@
         <div class="section sponsors">
             <a class="nav-anchor" id="sponsors"></a>
             <div class="container">
-                <h2>Our Past Sponsors</h2>
+                <h2>Our Sponsors</h2>
                 <div class='center'>
                     <div class="row">
-                        <div class="col s12 m4 center">
+                        <div class="col m12 l6 center">
                             <a href='https://www.capitalone.com/'>
                                 <img class='sponsor-image tier-4' src='static/assets/images/sponsors/capitalone.png'></a>
                         </div>
-                        <div class="col s12 m4 center">
-                            <a href='https://www.fidelity.com/'>
-                                <img class='sponsor-image tier-4' src='static/assets/images/sponsors/fidelity.png'></a>
-                        </div>
-                        <div class="col s12 m4 center">
+                        <div class="col m12 l6 center">
                             <a href='https://www.captechconsulting.com/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/captech.png'></a>
+                                <img class='sponsor-image tier-4' src='static/assets/images/sponsors/captech.png'></a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s12 m4 center">
-                            <a href='https://www.ibm.com/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/ibm.png'></a>
+                        <div class="col m12 l5 offset-l1 center">
+                            <a href='https://www.ally.com/'>
+                                <img class='sponsor-image tier-2' src='static/assets/images/sponsors/ally.png'></a>
                         </div>
-                        <div class="col s12 m4 center">
-                            <a href='https://www.sentryone.com/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/sentryone.png'></a>
-                        </div>
-                        <div class="col s12 m4 center">
-                            <a href='https://www.redventures.com/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/rv.png'></a>
+                        <div class="col m12 l5 center">
+                            <a href='https://www.optum.com/'>
+                                <img class='sponsor-image tier-2' src='static/assets/images/sponsors/optum.png'></a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s12 m4 center">
-                            <a href='https://www.facebook.com/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/facebook.png'></a>
+                        <div class="col m12 l5 offset-l1 center">
+                            <a href='https://www.globalbankers.com/'>
+                                <img class='sponsor-image tier-2' src='static/assets/images/sponsors/globalbankers.png'></a>
                         </div>
-                        <div class="col s12 m4 center">
+                        <div class="col m12 l5 center">
+                            <a href='https://www.equitasls.com/'>
+                                <img class='sponsor-image tier-2' src='static/assets/images/sponsors/equitas.png'></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col m12 l3 center">
                             <a href='https://www.sas.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
                         </div>
-                        <div class="col s12 m4 center">
-                            <a href='https://www.wolfram.com/'>
+                        <div class="col m12 l3 center">
+                            <a href='https://www.credit-suisse.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/creditsuisse.png'></a>
+                        </div>
+                        <div class="col m12 l3 center">
+                            <a href='https://www.wolfram.com//'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/wolfram.png'></a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m4 center">
-                            <a href='https://www.genesys.com/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/genesys.png'></a>
-                        </div>
-                        <div class="col s12 m4 center">
-                            <a href='https://www.sonovol.com/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sonovol.png'></a>
-                        </div>
-                        <div class="col s12 m4 center">
+                        <div class="col m12 l3 center">
                             <a href='https://cs.unc.edu/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/unc-cs.png'></a>
                         </div>
