--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="container">
                 <h2>Our Sponsors</h2>
                 <div class='center'>
-                    <div class="row">
+                    <div class="row sponsor-row">
                         <div class="col m12 l6 center">
                             <a href='https://www.capitalone.com/'>
                                 <img class='sponsor-image tier-4' src='static/assets/images/sponsors/capitalone.png'></a>
@@ -308,7 +308,7 @@
                                 <img class='sponsor-image tier-4' src='static/assets/images/sponsors/captech.png'></a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row sponsor-row">
                         <div class="col m12 l5 offset-l1 center">
                             <a href='https://www.ally.com/'>
                                 <img class='sponsor-image tier-2' src='static/assets/images/sponsors/ally.png'></a>
@@ -318,7 +318,7 @@
                                 <img class='sponsor-image tier-2' src='static/assets/images/sponsors/optum.png'></a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row sponsor-row">
                         <div class="col m12 l5 offset-l1 center">
                             <a href='https://www.globalbankers.com/'>
                                 <img class='sponsor-image tier-2' src='static/assets/images/sponsors/globalbankers.png'></a>
@@ -328,7 +328,7 @@
                                 <img class='sponsor-image tier-2' src='static/assets/images/sponsors/equitas.png'></a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row sponsor-row">
                         <div class="col m12 l3 center">
                             <a href='https://www.sas.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
