--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#3A3352">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
+    <meta property="og:url" content="https://hacknc.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="HackNC 2018">
+    <meta property="og:description" content="UNC-Chapel Hill's annual fall hackathon" />
+    <meta property="og:image" content="static/assets/images/CarnivalBannerHanging.png" />
+    
     <title>HackNC 2018</title>
     <link rel="shortcut icon" type="image/png" type="image/png" href="static/assets/images/logo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
