Add SentryOne, change sponsor sizing

--- a/index.html
+++ b/index.html
@@ -316,6 +316,12 @@
                         </div>
                     </div>
                     <div class="row sponsor-row">
+                        <div class="col m12 center">
+                            <a href='https://www.sentryone.com/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/sentryone.png'></a>
+                        </div>
+                    </div>
+                    <div class="row sponsor-row">
                         <div class="col m12 l5 offset-l1 center">
                             <a href='https://www.ally.com/'>
                                 <img class='sponsor-image tier-2' src='static/assets/images/sponsors/ally.png'></a>
@@ -336,21 +342,23 @@
                         </div>
                     </div>
                     <div class="row sponsor-row">
-                        <div class="col m12 l3 center">
+                        <div class="col m12 l4 center">
                             <a href='https://www.sas.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
                         </div>
-                        <div class="col m12 l3 center">
+                        <div class="col m12 l4 center">
                             <a href='https://www.credit-suisse.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/creditsuisse.png'></a>
                         </div>
-                        <div class="col m12 l3 center">
+                        <div class="col m12 l4 center">
                             <a href='https://www.wolfram.com//'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/wolfram.png'></a>
                         </div>
-                        <div class="col m12 l3 center">
+                    </div>
+                    <div class="row sponsor-row">
+                        <div class="col m12 l6 offset-l3 center">
                             <a href='https://cs.unc.edu/'>
-                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/unc-cs.png'></a>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/unc-cs.png'></a>
                         </div>
                     </div>
                     <p class="center">Looking to sponsor HackNC? Email us at <a class="sponsor-email"
