Add alternating table row colors to travel section

--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                         <div class='col s12'>
                             <h4>Carpool Amounts</h4>
                             <table class='grant-table'>
-                                <tr><th>One-way distance</th><th>Grant Amount</th></tr>
-                                <tr><td>0 - 50 miles</td><td>$0</td></tr>
-                                <tr><td>51 - 100 miles</td><td>$20</td></tr>
-                                <tr><td>101 - 200 miles</td><td>$40</td></tr>
-                                <tr><td>201 - 300 miles</td><td>$60</td></tr>
-                                <tr><td>301 - 400 miles</td><td>$80</td></tr>
-                                <tr><td>401+ miles</td><td>$100</td></tr>
+                                <tr class="table-row-odd"><th>One-way distance</th><th>Grant Amount</th></tr>
+                                <tr class="table-row-even"><td>0 - 50 miles</td><td>$0</td></tr>
+                                <tr class="table-row-odd"><td>51 - 100 miles</td><td>$20</td></tr>
+                                <tr class="table-row-even"><td>101 - 200 miles</td><td>$40</td></tr>
+                                <tr class="table-row-odd"><td>201 - 300 miles</td><td>$60</td></tr>
+                                <tr class="table-row-even"><td>301 - 400 miles</td><td>$80</td></tr>
+                                <tr class="table-row-odd"><td>401+ miles</td><td>$100</td></tr>
                             </table>
                             <br>
                         </div>
