Add HackNC official prizes

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#schedule">Schedule</a></li>
                     <li><a href="#sponsors">Sponsors</a></li>
+                    <li><a href="#prizes">Prizes</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -107,6 +108,7 @@
             <li><a href="#faq">FAQ</a></li>
             <li><a href="#schedule">Schedule</a></li>
             <li><a href="#sponsors">Sponsors</a></li>
+            <li><a href="#prizes">Prizes</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
 
@@ -366,9 +368,106 @@
                 </div>
             </div>
         </div>
+
+        <div class="section prizes">
+            <a class="nav-anchor" id="prizes"></a>
+            <div class="container">
+                <h2 class="center">Prizes</h2>
+                <h5 class="center">(More to be announced at the event)</h5>
+                <div class='center'>
+                    <div class='row'>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>1st Place</u></p>
+                                    <p>One GoPro HERO Session per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>2nd Place</u></p>
+                                    <p>One Amazon Echo Dot per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>3rd Place</u></p>
+                                    <p>One Mini Quadcopter per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>Most Innovative Hack</u></p>
+                                    <p>One Smart Notebook per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>Best Game</u></p>
+                                    <p>One Logitech Wireless Mouse per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>Healthiest Hack</u></p>
+                                    <p>One Xiaomi Mi Band 3 per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>Best Hardware Hack</u></p>
+                                    <p>One Arduino Car Starter Kit per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>Most "Millennial" Hack</u></p>
+                                    <p>One Emoji Plushie per Team Member</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>HackNC</h5>
+                                    <p><u>More to be announced</u></p>
+                                    <p>Stay tuned for our Devpost event</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
     
     </main>
-    <footer class="section dark contact page-footer">
+    <footer class="section light contact page-footer">
         <div class="container">
             <a class="nav-anchor" id="contact"></a>
             <h2>Contact</h2>
